added introduction to webbsite on start page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,25 @@
         </nav>
     </header>
     <main>
-        <div class="info">
-            <h2 class="info__title">Welcome to FoodApp</h2>
+        <div class="info display">
+            <h2 class="info__title">Welcome to Your Food Planner!</h2>
+            <p class="info__text-start">Are you ready to take control of your meals and shopping list? Our app makes meal planning easier, more
+                organized, and fun! Here's how:</p>
+            <ul class="info__list">
+                <li class="info__list-item-start">Organize Your Meals:<p class="info__list-item-end">Choose from various meal types (Breakfast, Lunch, Dinner, or Snacks) and
+                        add your favorite recipes.</p></li>
+                <li class="info__list-item-start">Create a Shopping List:<p class="info__list-item-end">Add ingredients to your shopping list with a single click, and check
+                        off items as you go. Never forget an item again!
+                </p></li>
+                <li class="info__list-item-start">Stay in Control:<p class="info__list-item-end">Filter your food items by type, search for specific meals, and keep your
+                        shopping list updated in real-time.</p></li>
+                <li class="info__list-item-start">Save Your Favorites:<p class="info__list-item-end">Your food and shopping lists are saved, so you can return anytime to view
+                        or edit them.</p></li>
+            </ul>
+            <p class="info__text-end">This is more than just a food app — it’s a simple way to stay organized, reduce food waste, and enjoy
+                healthy, well-planned meals. Start planning today and make your kitchen time easier!
+
+            </p>
         </div>
         <div class="your-food">
             <div class="your-food__filter">
@@ -55,7 +72,7 @@
                 <p class="shopping-list__item-text">Items left to buy</p>
                 <span class="shopping-list__item-count">0</span>
             </div>
-        </div> 
+        </div>
     </main>
 
     <script src="main.js"></script>
