mobile zoom bug

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>FoodApp</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -44,7 +44,7 @@
         <div class="your-food">
             <div class="your-food__filter">
                 <label class="your-food__filter-label" for="search">Search food</label>
-                <input class="your-food__filter-input" type="text" maxlength="60" name="search"
+                <input class="your-food__filter-input input" type="text" maxlength="60" name="search"
                     placeholder="Search..." />
                 <ul class="your-food__filter-list">
                     <li class="your-food__filter-btn">Breakfast</li>
@@ -62,7 +62,7 @@
             <div class="shopping-list__container">
                 <h2 class="shopping-list__title">Shopping List</h2>
                 <div class="shopping-list__input-container">
-                    <input type="text" class="shopping-list__input" placeholder="Add your item...">
+                    <input type="text" class="shopping-list__input input" placeholder="Add your item...">
                     <button type="button" class="shopping-list-add">Add</button>
                 </div>
                 <ul class="shopping-list__item-container">
